Add AiRISE dashboard

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
         <!-- Slide 2: Problem Statement -->
         <div class="slide slide2" data-slide="2">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">2 / 9</div>
             <h2 class="slide-title" style="font-size: 3.5rem;">Permasalahan</h2>
             <div class="slide-content">
@@ -305,7 +305,7 @@
 
         <!-- Slide 3: Solution Overview -->
         <div class="slide slide3" data-slide="3">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">3 / 9</div>
             <h2 class="slide-title">Solusi FloodGuard</h2>
             <div class="slide-content">
@@ -341,7 +341,7 @@
 
         <!-- Slide 4: Technology & Methodology -->
         <div class="slide slide4" data-slide="4">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">4 / 9</div>
             <h2 class="slide-title" style="font-size: 3rem;">Teknologi & Metodologi</h2>
             <div class="slide-content">
@@ -371,7 +371,7 @@
 
         <!-- Slide 5: Spatial Analysis -->
         <div class="slide slide5" data-slide="5">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">5 / 9</div>
             <h2 class="slide-title" style="font-size: 3rem;">Analisis Spasial</h2>
             <div class="slide-content">
@@ -405,7 +405,7 @@
 
         <!-- Slide 6: SDG Contribution -->
         <div class="slide slide6" data-slide="6">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">6 / 9</div>
             <h2 class="slide-title" style="font-size: 3rem;">Kontribusi terhadap SDGs</h2>
             <div class="slide-content">
@@ -434,7 +434,7 @@
 
         <!-- Slide 7: Impact & Benefits -->
         <div class="slide slide7" data-slide="7">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">7 / 9</div>
             <h2 class="slide-title" style="font-size: 3rem; color: #667eea;">Impact & Manfaat</h2>
             <div class="slide-content" style="color: #333;">
@@ -474,7 +474,7 @@
 
         <!-- Slide 8: Implementation & Sustainability -->
         <div class="slide slide8" data-slide="8">
-            <div class="logo">💧 FloodGuard</div>
+            <div class="logo"></div>
             <div class="slide-number">8 / 9</div>
             <h2 class="slide-title" style="font-size: 3rem;">Implementasi & Keberlanjutan</h2>
             <div class="slide-content">
